--- a/packages/utf8mb3/Cargo.toml
+++ b/packages/utf8mb3/Cargo.toml
@@ -1,7 +1,16 @@
 [package]
 name = "utf8mb3"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
+authors = ["WumaCoder <1829913225@qq.com>"]
+description = "Let mysql's utf8 encoding store four-byte characters such as emoji(让 mysql 的 utf8 编码存储表情符号这类的四字节字符)."
+publish = true
+license = "MIT"
+readme = "readme.md"
+homepage = "https://github.com/WumaCoder/utf8mb3"
+repository = "https://github.com/WumaCoder/utf8mb3.git"
+keywords = ["utf8", "encode", "decode", "utf8mb3", "utf8mb4", "wasm", "mysql", "emoji", "unicode"]
+categories = ["encoding", "text-processing", "unicode", "wasm"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
