--- a/packages/utf8mb3-wasm/wasm-libs/utf8mb3-js/package.json
+++ b/packages/utf8mb3-wasm/wasm-libs/utf8mb3-js/package.json
@@ -8,7 +8,8 @@
     "utf8mb3-wasm-esm.js",
     "utf8mb3-wasm-esm_bg.js",
     "index.js",
-    "index.d.ts"
+    "index.d.ts",
+    "readme.md"
   ],
   "main": "index.js",
   "types": "index.d.ts",
